preflight/impl/tests/ui/fail-wrong-impl.stderr
error: expected a trait implementation of `Avionics`
  --> $DIR/fail-wrong-impl.rs:14:6
   |
14 | impl Cool for Controller {}
   |      ^^^^

warning: unused imports: `Avionics`, `Control`, `Sensors`
 --> $DIR/fail-wrong-impl.rs:1:40
  |
1 | use preflight_impl::{avionics_harness, Avionics, Control, Sensors};
  |                                        ^^^^^^^^  ^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
